--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ mod_name=Create Mechanical Companion
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.3-1.20.1
+mod_version=1.4-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -61,10 +61,10 @@ mod_description=This mod adds a customizable mechanical wolf companion.
 
 create_minecraft_version = 1.20.1
 flywheel_minecraft_version = 1.20.1
-create_version = 0.5.1.j-55
-flywheel_version = 0.6.11-13
+create_version = 6.0.4-79
+flywheel_version = 1.0.2
 registrate_version = MC1.20-1.3.3
-
+ponder_version = 1.0.52
 curios_version = 5.14.0+1.20.1
 
-jei_version = 15.2.0.22
+jei_version = 15.20.0.112
