--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,8 @@ repositories {
         name = "Illusive Soulworks maven"
         url = "https://maven.theillusivec4.top/"
     }
+    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // ForgeConfigAPIPort
+    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
 
 
 
@@ -158,8 +160,13 @@ dependencies {
 
 
     dependencies {
-        implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
-        implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
+        implementation(fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false })
+        implementation(fg.deobf("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}"))
+        compileOnly(fg.deobf("dev.engine-room.flywheel:flywheel-forge-api-${minecraft_version}:${flywheel_version}"))
+        runtimeOnly(fg.deobf("dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}"))
+        implementation(fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}"))
+        compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
+        implementation("io.github.llamalad7:mixinextras-forge:0.4.1")
         implementation(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
         implementation(fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}"))
         implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
