--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -70,7 +70,12 @@ versionRange="[0.5.1.f,)"
 ordering="AFTER"
 side="BOTH"
 
-
+[[dependencies.${mod_id}]]
+modId="forge"
+mandatory=true
+versionRange="[47.3.10,)"
+ordering="NONE"
+side="BOTH"
 
 # Features are specific properties of the game environment, that you may want to declare you require. This example declares
 # that your mod requires GL version 3.2 or higher. Other features will be added. They are side aware so declaring this won't
